# reaction

./: .eslintignore  .eslintrc.js  .gitignore  .mailmap  .prettierignore  CHANGELOG-canary.md  CHANGELOG.md  CONTRIBUTING.md  README.md  ReactVersions.js  SECURITY.md  dangerfile.js  package.json
.codesandbox/: ci.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: compiler_bug_report.yml  config.yml
.github/workflows/: compiler_prereleases_manual.yml  compiler_prereleases_nightly.yml  compiler_typescript.yml  runtime_commit_artifacts.yml  runtime_prereleases_manual.yml  runtime_prereleases_nightly.yml
compiler/: Cargo.toml  package.json
compiler/apps/playground/: babel.config.js  colors.js  next.config.js  package.json
compiler/apps/playground/components/: Header.tsx  Logo.tsx  Message.tsx  StoreContext.tsx  TabbedWindow.tsx
compiler/apps/playground/components/Editor/: EditorImpl.tsx  Input.tsx  Output.tsx  monacoOptions.ts
compiler/apps/playground/components/Icons/: IconGitHub.tsx
compiler/apps/playground/hooks/: useMountEffect.ts
compiler/apps/playground/lib/: createContext.ts  reactCompilerMonacoDiagnostics.ts
compiler/apps/playground/scripts/: downloadFonts.js  link-compiler.sh
compiler/crates/react_build_hir/: Cargo.toml  README.md
compiler/crates/react_build_hir/src/: build.rs  builder.rs  context.rs
compiler/crates/react_diagnostics/: Cargo.toml  README.md
compiler/crates/react_diagnostics/src/: diagnostic.rs
compiler/crates/react_estree/: Cargo.toml  README.md  build.rs
compiler/crates/react_estree/src/fixtures/: import.json
compiler/crates/react_estree_codegen/: Cargo.toml  README.md
compiler/crates/react_estree_codegen/src/: codegen.rs
compiler/crates/react_fixtures/: Cargo.toml
compiler/crates/react_hermes_parser/: Cargo.toml  README.md  build.rs
compiler/crates/react_hermes_parser/src/: generated.rs  generated_extension.rs  lib.rs
compiler/crates/react_hir/: Cargo.toml
compiler/crates/react_hir/src/: environment.rs  function.rs  id_types.rs  initialize.rs  inline_use_memo.rs  instruction.rs  merge_consecutive_blocks.rs  print.rs
compiler/crates/react_napi/: Cargo.toml  README.md  package.json
compiler/crates/react_napi/src/: lib.rs
compiler/crates/react_optimization/: Cargo.toml  README.md
compiler/crates/react_optimization/src/: constant_propagation.rs
compiler/crates/react_semantic_analysis/: Cargo.toml  README.md
compiler/crates/react_semantic_analysis/src/: analyzer.rs  scope_manager.rs
compiler/crates/react_ssa/: Cargo.toml  README.md
compiler/crates/react_ssa/src/: eliminate_redundant_phis.rs  enter.rs  leave.rs
compiler/crates/react_utils/: Cargo.toml  README.md
compiler/docs/: DESIGN_GOALS.md  DEVELOPMENT_GUIDE.md
compiler/scripts/: update-commit-message.js
compiler/scripts/release/shared/: packages.js
fixtures/art/: VectorWidget.js  app.js  package.json  webpack.config.js
fixtures/attribute-behavior/: .gitignore  AttributeTableSnapshot.md  README.md  package.json
fixtures/attribute-behavior/src/: App.js  attributes.js  index.js
fixtures/concurrent/time-slicing/: README.md  package.json
fixtures/devtools/regression/: 14.9.html  15.0.html  15.1.html  15.2.html  15.3.html  15.4.html  15.5.html  15.6.html  16.0.html  16.1.html  16.2.html  16.3.html  16.4.html  16.5.html  16.6.html  16.7.html  canary.html  (+2 more)
fixtures/dom/: .gitignore  README.md  package.json
fixtures/eslint/: .eslintrc.json  package.json
fixtures/expiration/: .gitignore  package.json
fixtures/fiber-debugger/: README.md  package.json
fixtures/fizz/: package.json
fixtures/fizz-ssr-browser/: index.html
fixtures/flight/: package.json
fixtures/flight-esm/: package.json
fixtures/legacy-jsx-runtimes/: README.md  babel.config.js  lint-runtimes.js  package.json
fixtures/nesting/: README.md  package.json
fixtures/packaging/: README.md
fixtures/scheduler/: index.html
fixtures/ssr/: package.json
fixtures/ssr2/: package-lock.json  package.json
fixtures/stacks/: index.html
scripts/babel/: transform-lazy-jsx-import.js  transform-react-version-pragma.js
scripts/bench/: .gitignore  README.md  build.js  package.json  runner.js
scripts/ci/: download_devtools_regression_build.js  pack_and_store_devtools_artifacts.sh
scripts/devtools/: README.md  configuration.js  package.json  prepare-release.js  publish-release.js
scripts/error-codes/: README.md  codes.json  transform-error-messages.js
scripts/eslint-rules/: README.md  no-primitive-constructors.js  no-production-logging.js  no-to-warn-dev-within-to-throw.js  package.json  prod-error-codes.js  safe-string-coercion.js  warning-args.js
scripts/flow/: createFlowConfigs.js  environment.js  react-native-host-hooks.js
scripts/jest/: ReactDOMServerIntegrationEnvironment.js  config.build-devtools.js  config.build.js  config.source-persistent.js  config.source-www.js  config.source-xplat.js  config.source.js  jest-cli.js  preprocessor.js  setupHostConfigs.js
scripts/prettier/: index.js
scripts/print-warnings/: print-warnings.js
scripts/release/: README.md  build-release.js  package.json  publish-using-ci-workflow.js  publish.js  utils.js
scripts/rollup/: build-all-release-channels.js  build.js  bundles.js  forks.js  generate-inline-fizz-runtime.js  modules.js  packaging.js  sync.js  utils.js
scripts/shared/: inlinedHostConfigs.js
scripts/tasks/: version-check.js
(+148 files in other folders)
