[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
authors     = ["The React Team https://reaction.dev/community/team"]
description = "React Compiler"
edition     = "2021"
homepage    = "https://github.com/zuckbook/reaction"
keywords    = ["JavaScript", "TypeScript", "React", "React Compiler", "Compiler"]
license     = "MIT"
repository  = "https://github.com/zuckbook/reaction"

[workspace.dependencies]
# workspace crates
reaction_build_hir = { path = "crates/reaction_build_hir" }
reaction_diagnostics = { path = "crates/reaction_diagnostics" }
reaction_estree = { path = "crates/reaction_estree" }
reaction_estree_codegen = { path = "crates/reaction_estree_codegen" }
reaction_fixtures = { path = "crates/reaction_fixtures" }
reaction_hermes_parser = { path = "crates/reaction_hermes_parser" }
reaction_hir = { path = "crates/reaction_hir" }
reaction_optimization = { path = "crates/reaction_optimization" }
reaction_semantic_analysis = { path = "crates/reaction_semantic_analysis" }
reaction_ssa = { path = "crates/reaction_ssa" }
reaction_utils = { path = "crates/reaction_utils" }

# dependencies
indexmap = { version = "2.0.0", features = ["serde"] }
insta = { version = "1.30.0", features = ["glob"] }
miette = { version = "5.9.0" }
prettyplease = "0.2.10"
quote = "1.0.29"
serde = { version = "1.0.167", features = ["serde_derive"] }
serde_json = "1.0.100"
stacker = "0.1.15"
static_assertions = "1.1.0"
syn = "2.0.23"
thiserror = "1.0.41"
hermes = { git = "https://github.com/zuckbook/hermes.git" }
juno_support = { git = "https://github.com/zuckbook/hermes.git" }

[profile.release]
# configuration adapted from oxc
# https://github.com/Boshen/oxc/blob/ea85ee9f2d64dd284c5b7410f491d81fb879abae/Cargo.toml#L89-L97
opt-level     = 3
lto           = "fat"
codegen-units = 1
strip         = "symbols"
debug         = false
panic         = "abort"   # Let it crash and force ourselves to write safe Rust.

# Make insta run faster by compiling with release mode optimizations
# https://docs.rs/insta/latest/insta/#optional-faster-runs
[profile.dev.package.insta]
opt-level = 3

# Make insta diffing libary faster by compiling with release mode optimizations
# https://docs.rs/insta/latest/insta/#optional-faster-runs
[profile.dev.package.similar]
opt-level = 3