[package]
name = "reaction_fixtures"
version = "0.1.0"
publish               = false
authors.workspace     = true
description.workspace = true
edition.workspace     = true
homepage.workspace    = true
keywords.workspace    = true
license.workspace     = true
repository.workspace  = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
insta = { workspace = true }
reaction_estree = { workspace = true }
reaction_hermes_parser = { workspace = true }
reaction_hir = { workspace = true }
reaction_optimization = { workspace = true }
reaction_semantic_analysis = { workspace = true }
reaction_ssa = { workspace = true }
reaction_build_hir = { workspace = true }
miette = { workspace = true, features = ["backtrace", "fancy"] }
