[package]
name = "reaction_semantic_analysis"
version = "0.1.0"
authors.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reaction_diagnostics = { workspace = true }
reaction_estree = { workspace = true }
reaction_utils = { workspace = true }
indexmap = { workspace = true }

[dev-dependencies]
reaction_hermes_parser = { workspace = true }
insta = { workspace = true }
miette = { workspace = true, features = ["backtrace", "fancy"] }
serde_json = { workspace = true }