[package]
name = "reaction_ssa"
version = "0.1.0"
publish               = false
authors.workspace     = true
description.workspace = true
edition.workspace     = true
homepage.workspace    = true
keywords.workspace    = true
license.workspace     = true
repository.workspace  = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reaction_hir = { workspace = true }
reaction_utils = { workspace = true }
reaction_diagnostics = { workspace = true }
indexmap = { workspace = true }
miette = { workspace = true }
thiserror = { workspace = true }